# DatalogInterpreter

./: .gitignore  AddAutomation.h  Automaton.h  BlockCommentAutomaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.h  Database.h  DatalogProgram.h  FactsAutomaton.h  Graph.h  Header.h  Interpreter.h  LeftParenAutomaton.h  Lexer.h  LineCommentAutomaton.h  MultiplyAutomaton.h  Node.h  Parameter.h  Parser.h  PeriodAutomaton.h  Predicate.h  QMarkAutomata.h  QueriesAutomaton.h  README.md  Relation.h  Rule.h  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.h  Token.h  TokenType.h  Tuple.h  UndefinedCharAutomaton.h  UnterminatedCommentAutomaton.h  UnterminatedStringAutomaton.h  main.cpp  makefile  makefile_1  (+4 more)
Lexer/: Lexer.h
Lexer/Automata/: Automaton.h  BlockCommentAutomaton.h  EOFAutomaton.h  IDAutomaton.h  LineCommentAutomaton.h  RightParenAutomaton.h
Parser/: Parser.h
